--- a/exercise-3/styles/index.css
+++ b/exercise-3/styles/index.css
@@ -1,6 +1,8 @@
 body {
     background-color: white;
     font-family: 'Raleway', sans-serif;
+    margin:0;
+    padding:0;
 }
 
 .navigation ul {
@@ -10,6 +12,7 @@ body {
 }
 
 .navigation li {
+    padding: 10px;
     font-weight: 100;
     letter-spacing: 2px;
 }
@@ -21,14 +24,21 @@ body {
     letter-spacing: 4px;
 }
 
+.navigation  li.global {
+    display:none;
+}
+
 #banner {
     background-image: url("../img/background-img.jpeg");
     background-size: cover;
     background-position: bottom center;
-    width: 100%;
+    height: 350px;
+    width: 100%;  
 }
 
 h1 {
+    border-style: solid;
+    border-color:white;
     position: relative;
     top: 50px;
     width: 400px;
@@ -42,6 +52,11 @@ h1 {
 #main {
     padding: 40px;
     text-align: center;
+    margin-left:auto;
+    margin-right:auto;
+    width:500px;
+    height:800px;
+    overflow:scroll;
 }
 
 h2 {
@@ -52,6 +67,11 @@ h2 {
 }
 
 h3 {
+    border-style: dotted;
+    border-width: thin;
+    border-color:red;
+    margin:30px 20px 30px 20px;
+    padding:20px 30px 20px 30px;
     color: red;
     font-size: 14px;
     line-height: 48px;
@@ -59,6 +79,7 @@ h3 {
 }
 
 p {
+    margin: 40px 0 0 0;
     padding: 10px 20px;
     color: grey;
     font-size: 16px;
@@ -66,6 +87,10 @@ p {
 }
 
 .pull-quote {
+    width:400px;
+    margin-left:auto;
+    margin-right:auto;
+
 
 }
 
@@ -86,6 +111,8 @@ p {
 }
 
 .share a {
+    padding:14px;
+    margin: 10px;
     background: red;
     border: 1px solid red;
     border-radius: 3px;
