--- a/exercise-3/styles/index.css
+++ b/exercise-3/styles/index.css
@@ -25,7 +25,7 @@ body {
 }
 
 .navigation  li.global {
-    display:none;
+    visibility: hidden;
 }
 
 #banner {
@@ -79,7 +79,7 @@ h3 {
 }
 
 p {
-    margin: 40px 0 0 0;
+    margin-top: 40px;
     padding: 10px 20px;
     color: grey;
     font-size: 16px;
@@ -88,7 +88,7 @@ p {
 
 .pull-quote {
     width:400px;
-    margin-left:auto;
+    margin-left:0;
     margin-right:auto;
 
 
